--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,206 @@
+body{
+  background-color: #EEFCF2;
+}
+
+
+/* Login Page */
+.login-banner{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#login-banner-logo{
+  width: 10%;
+}
+
+#login-banner-text{
+  font-size:xx-large;
+}
+
+.login-box{
+  background-color: white;
+  border-radius: 15px;
+  border: 1px solid #abadad;
+
+  margin: auto;
+  max-width: 400px;
+  width: 50%;
+
+  padding: 0 0 2% 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  box-shadow: 0 0 50px 0px #BED1D0;
+}
+
+.login-text{
+  font-size: xx-large;
+  font-weight: 100;
+
+  padding-bottom: 5%;
+}
+
+.login-input{
+  background: #F5F8F7;
+  border-radius: 4px;
+  border-color: #abadad;
+  border-style: solid;
+
+  width: 80%;
+  margin: 20px 0;
+  padding: 5px 15px;
+  line-height: 30px;
+
+  color: #abadad;
+  font-style: italic;
+  font-size: 15px;
+}
+
+
+.login-button{
+  background: #29BE5D;
+  border-radius: 3px;
+  border-style: none;
+  
+  margin: 0 0 50px 0;
+
+  font-size: medium;
+
+  max-width: 100px;
+  width: 40%;
+  padding: 10px 10px;
+}
+
+.login-button:hover{
+  background: #1c9d49;
+  cursor: pointer;
+}
+
+.login{
+  margin: 0;
+}
+
+.login-link{
+  color: #29BE5D;
+  margin: 0 0 20px 0;
+}
+
+.login-link:hover{
+  color: #1c9d49;
+  cursor: pointer;
+}
+
+/* Navbar */
+.navbar-box{
+  position: fixed;
+
+  background: white;
+  /* width: 17%; */
+  width: 260px;
+  height: 100vh;
+}
+
+.navbar-banner{
+  display: flex;
+  align-items: center;
+}
+
+#navbar-banner-logo{
+  width: 40%;
+
+  transition: width 0.5s;
+}
+
+#navbar-banner-logo:hover{
+  width: 42%;
+}
+
+#navbar-banner-text{
+  font-size: 150%;
+}
+
+.navbar-burger{
+  position: absolute;
+
+  
+  top: 2%;
+  right: 3%;
+  width: 12%;
+
+  transition: width 0.5s;
+}
+
+.navbar-burger:hover{
+  cursor: pointer;
+  color: #000000;
+
+  width: 15%;
+}
+
+.navbar-item{
+  position: relative;
+  
+  padding: 10px 0 12px 40px;
+  gap: 7%;
+
+  display: flex;
+  align-items: center;
+}
+
+.navbar-item:hover{
+  cursor: pointer;
+  background-color: #D9D9D9;
+
+  box-shadow: inset -5px 0 0 0px #557677;
+}
+
+.navbar-item-logo{
+  width: 12%;
+}
+
+.navbar-item-text{
+  font-size: 12px;
+}
+
+#navbar-settings{
+  margin-top: 200px;
+}
+
+.navbar-profile{
+  display: flex;
+  align-items: center;
+  padding: 7px 0 7px 5px;
+
+  margin-left: 18px;
+
+  width: 85%;
+  border-radius: 5px;
+}
+
+.navbar-profile:hover{
+  cursor: pointer;
+  background-color: #f1f1f1;
+}
+
+.navbar-profile-img{
+  width: 15%;
+  margin-right: 10px;
+}
+
+.navbar-profile-exit{
+  width: 25px;
+  margin-left: 40px;
+}
+.navbar-profile-exit:hover{
+  cursor: pointer;
+  color: #abadad;
+}
+
+/* Preset React CSS for reference */
 .App {
   text-align: center;
 }
