--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -229,6 +229,7 @@ body{
 .graph-row {
   display: flex;
   width: 100%;
+  gap: 20px;
 }
 
 .line-graph-container {
@@ -238,7 +239,7 @@ body{
   min-width: 400px;
   max-width: 600px;
   padding: 10px 20px;
-  margin: 10px 10px;
+  margin: 10px 0px;
   background-color: white;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
@@ -283,7 +284,22 @@ body{
   stroke-dasharray: 3 3;
 }
 
-/* Tooltip */
+/* Pie graph */
+.pie-chart-container {
+  border: none;
+  border-radius: 10px;
+  padding: 10px 20px;
+  margin: 10px 0px;
+  background-color: white;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease;
+}
+
+.pie-chart-container:hover {
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+/* Tooltip and Legend */
 .custom-tooltip {
   background-color: #ffffffb0;
   color: #000000;
@@ -291,6 +307,7 @@ body{
   border-radius: 10px;
   border: none;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  font-size: small;
 }
 
 .tooltip-label {
@@ -316,6 +333,10 @@ body{
 
 .recharts-area {
   fill-opacity: 0.5;
+}
+
+.recharts-legend-item-text {
+  font-size: small;
 }
 
 /* Preset React CSS for reference */
