--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,9 @@
+* { 
+  -moz-box-sizing: border-box; 
+  -webkit-box-sizing: border-box; 
+   box-sizing: border-box; 
+}
+
 body{
   background-color: #EEFCF2;
 }
@@ -113,11 +119,11 @@ body{
 #navbar-banner-logo{
   width: 40%;
 
-  transition: width 0.5s;
+  transition: all 0.5s ease;
 }
 
 #navbar-banner-logo:hover{
-  width: 42%;
+  transform: scale(1.2);
 }
 
 #navbar-banner-text{
@@ -132,14 +138,14 @@ body{
   right: 3%;
   width: 12%;
 
-  transition: width 0.5s;
+  transition: all 0.5s ease;
 }
 
 .navbar-burger:hover{
   cursor: pointer;
   color: #000000;
 
-  width: 15%;
+  transform: scale(1.2);
 }
 
 .navbar-item{
@@ -156,19 +162,19 @@ body{
   cursor: pointer;
   background-color: #f1f1f1;
 
-  box-shadow: inset -5px 0 0 0px #557677;
+  /* box-shadow: inset -5px 0 0 0px #557677; */
 }
 
 .navbar-item:active{
   background-color: #D9D9D9;
 
-  box-shadow: inset -5px 0 0 0px #557677;
+  box-shadow: inset -5px 0 0 0 #557677;
 }
 
 .navbar-item:focus{
   background-color: #D9D9D9;
 
-  box-shadow: inset -5px 0 0 0px #557677;
+  box-shadow: inset -5px 0 0 0 #557677;
 }
 
 .navbar-item-logo{
@@ -280,6 +286,9 @@ body{
   background: #abadad3f;
 }
 
+
+/* Graphs */
+
 .line-graph-grid {
   stroke: #e0e0e0;
   stroke-dasharray: 3 3;
@@ -337,6 +346,81 @@ body{
 
 .recharts-legend-item-text {
   font-size: small;
+}
+
+/* Settings */
+.settings-header{
+  display: flex;
+}
+
+.settings-tab{
+  color: #bdbdb4;
+  position: relative;
+  font-size: 13px;
+
+  padding: 10px 30px 15px 30px;
+
+  transition: all 0.1s;
+}
+
+.settings-tab:hover{
+  cursor: pointer;
+  color: black;
+}
+
+.settings-tab::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: black;
+  transition: all 0.3s ease-out;
+}
+
+.settings-tab:hover::after {
+  transform: scaleX(1);
+}
+
+.settings-tab:focus::after {
+  transform: scaleX(1);
+}
+
+
+.settings-text{
+  display: inline-block;
+
+  color: #bdbdb4;
+  font-size: 13px;
+
+  padding: 10px 30px;
+}
+
+.settings-subheader{
+  display: block;
+  width: 500px;
+  max-width: 100%;
+  font-size: 13px;
+
+  padding: 10px 30px;
+
+  box-shadow: inset 0 -1px 0 0 #818181;
+}
+
+.theme-button{
+  color: #bdbdb4;
+  
+  width: 50px;
+
+  transition: all 0.3s ease;
+}
+
+.theme-button:hover{
+  cursor: pointer;
+
+  transform: scale(1.2);
 }
 
 /* Preset React CSS for reference */
