--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -249,6 +249,7 @@ body{
   background-color: white;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
+  margin:10px;
 }
 
 .box-container:hover {
@@ -302,6 +303,7 @@ body{
   background-color: white;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
+  margin:10px
 }
 
 .square-box-container:hover {
