--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -582,11 +582,11 @@ body{
   display: contents;
 }
 
-.items-table-row:hover > span{
+.items-table-row:hover > span {
   background-color: #55767740;
 }
 
-.items-table-item{
+.items-table-item {
   font-size: 16px;
   padding: 10px 0px 10px 7px;
   color: #000000B3;
@@ -597,46 +597,7 @@ body{
   height: 50%;
 }
 
-#file-upload{
-  visibility: hidden;
-  display: contents;
-}
-
-#file-upload-label{
-  display: block;
-  color: #29BE5D;
-  text-align: center;
-  align-self: center;
-}
-
-#file-upload-label:hover{
-  color:#61dafb;
-  cursor: pointer;
-}
-
-#file-drop-zone{
-  background-color: white;
-  width: 100%;
-  min-width: 250px;
-  aspect-ratio: 4 / 3.5;
-  border: solid;
-  border-color: #00000080;
-  border-width: 1px;
-  border-radius: 25px;
-  padding: 5px 0px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  transition: box-shadow 0.3s ease;
-  text-align: center;
-  align-content: center;
-  justify-content: center;
-}
-
-#file-drop-zone:hover{
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
-  transition: box-shadow 0.3s ease;
-}
-
-#file-upload-widget {
+#file-widget {
   display: inline-block;
   width: 25%;
   min-width: 250px;
@@ -645,15 +606,54 @@ body{
   text-align: center;
   align-content: center;
   justify-content: center;
+
+  #upload-label{
+    display: block;
+    color: #29BE5D;
+    text-align: center;
+    align-self: center;
+  }
+
+  #upload-label:hover{
+    color:#61dafb;
+    cursor: pointer;
+  }
+
+  #drop-zone{
+    background-color: white;
+    width: 100%;
+    min-width: 250px;
+    aspect-ratio: 4 / 3.5;
+    border: solid;
+    border-color: #00000080;
+    border-width: 1px;
+    border-radius: 25px;
+    padding: 5px 0px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease;
+    text-align: center;
+    align-content: center;
+    justify-content: center;
+  }
+
+  #drop-zone:hover{
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
+    transition: box-shadow 0.3s ease;
+  }
+
+  #upload-methods{
+    display: block;
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+    align-content: center;
+    justify-content: center;
+  }
 }
 
-#file-widget{
-  display: block;
-  background-color: transparent;
-  width: 100%;
-  height: 100%;
-  align-content: center;
-  justify-content: center;
+#file-upload{
+  visibility: hidden;
+  display: contents;
 }
 
 #file-progress{
@@ -673,4 +673,17 @@ body{
 #network-widget{
   display: inline-block;
   width: 50%;
+}
+
+#members-container {
+  background-color: white;
+  width: 60%;
+  min-width: 250px;
+  border: solid;
+  border-color: #00000080;
+  border-width: 1px;
+  border-radius: 0px 0px 25px 25px;
+  padding: 5px 0px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease;
 }
