--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -235,7 +235,7 @@ body{
 .graph-row {
   display: flex;
   width: 100%;
-  max-width: 1220px;
+  /* max-width: 1220px; */
   gap: 20px;
   margin: 20px 0px;
 }
