Renamed graph-row to page-row

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -231,8 +231,7 @@ body{
   padding: 20px;
 }
 
-/* Line Graph */
-.graph-row {
+.page-row {
   display: flex;
   width: 100%;
   /* max-width: 1220px; */
