--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -234,16 +234,17 @@ body{
 .page-row {
   display: flex;
   width: 100%;
-  /* max-width: 1220px; */
+  /* max-width: 1220px;
   gap: 20px;
-  margin: 20px 0px;
+  margin: 20px 0px; */
 }
 
+/* Box */
 .box-container {
   border: none;
   border-radius: 10px;
   width: 100%;
-  min-width: 400px;
+  /* min-width: 400px; */
   padding: 5px 0px;
   background-color: white;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
