--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -604,6 +604,7 @@ body{
 
 #filesTable {
   height: 50%;
+  margin-top: 10px;
 }
 
 #file-widget {
@@ -612,6 +613,7 @@ body{
   text-align: center;
   align-content: center;
   justify-content: center;
+  margin: 10px;
 
   #upload-label{
     display: block;
@@ -677,7 +679,7 @@ body{
 
 #network-widget{
   flex: 3;
-  margin-bottom: 0px;
+  margin: 10px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
 }
@@ -688,7 +690,7 @@ body{
   border-color: #00000080;
   border-width: 1px;
   border-radius: 25px 25px 0px 0px;
-  padding: 5px 5px 8px 8px;
+  padding: 5px 5px 8px 10px;
   width: 100%;
   .input {
     width: 100%;
@@ -709,12 +711,14 @@ body{
   width: 60%;
   background-color: transparent;
   min-width: 250px;
-  padding-left: 5px;
+  padding-left: 8px;
 }
 
 #top-file-widgets {
   display: flex;
-}/* CSS for custom green slider */
+}
+
+/* CSS for custom green slider */
 .custom-range {
   cursor: pointer;
 }
