--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -895,6 +895,27 @@ body{
   border-radius: 20px;
 } */
 
+#top-file-widgets {
+  display: flex;
+  height: 30%;
+}
+
+#price-files-widget{
+  flex: 3;  
+  display: flex;
+  flex-direction: column;
+  margin: 10px; 
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease;
+  .items-table {
+    flex: 9;
+    .items-table-item{
+      align-self: center;
+      text-align: center;
+    }
+  }
+}
+
 #network-widget{
   flex: 3;
   margin: 10px;
@@ -932,9 +953,6 @@ body{
   padding-left: 8px;
 }
 
-#top-file-widgets {
-  display: flex;
-}
 
 /* CSS for custom green slider */
 .custom-range {
