--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -10,6 +10,10 @@ body{
 
 
 /* Login Page */
+.login-page{
+  padding: 0 0 20px 0 ;
+}
+
 .login-banner{
   display: flex;
   justify-content: center;
@@ -112,6 +116,10 @@ body{
   cursor: pointer;
 }
 
+.create-wallet-key-name{
+  margin: 0;
+}
+
 .create-wallet-key-box{
   display: flex;
   justify-content: space-between;
@@ -121,9 +129,13 @@ body{
   border-radius: 50px;
 
   min-width: 450px;
-  height: 55px;
+  height: 45px;
 
   padding: 0px 20px;
+}
+
+.create-wallet-key{
+  margin: 10px 0;
 }
 
 .copy-clipboard{
@@ -137,6 +149,7 @@ body{
 
 .copy-clipboard-status{
   color: #3ac76b;
+  font-size: small;
   margin: 3px 0;
 }
 
@@ -146,7 +159,7 @@ body{
 
   background-color: white;
 
-  margin: 15px;
+  margin: 0 0 15px 0;
   padding: 10px;
 }
 
@@ -308,6 +321,10 @@ body{
 .navbar-profile:hover{
   cursor: pointer;
   background-color: #f1f1f1;
+}
+
+.navbar-profile:focus{
+  background-color: #D9D9D9;
 }
 
 .navbar-profile-dark{
@@ -721,6 +738,33 @@ body{
 /* Notification Checkbox */
 .notification-checkbox{
   accent-color: #29b63b;
+  width: auto;
+}
+
+.profile-user-container{
+  display: flex;
+  align-items: center;
+}
+
+.profile-img{
+  width: 200px;
+}
+
+.profile-title{
+  font-size: xx-large;
+  font-weight: 400;
+}
+
+.profile-address{
+  font-size: x-large;
+  font-weight: 100;
+
+  color: #818181;
+}
+
+.profile-credential-box{
+  width: 50%;
+  margin: 20px 0 0 0;
 }
 
 /* Preset React CSS for reference */
