--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -53,29 +53,44 @@ body{
   padding-bottom: 5%;
 }
 
-.login-input{
-  background: #F5F8F7;
-  border-radius: 4px;
-  border-color: #abadad;
-  border-style: solid;
-
+.login-input-box{
   width: 80%;
-  margin: 20px 0;
+  max-width: 320px;
+
+  margin: 5px 0;
+}
+
+.login-input{
+  background: #f2f2f2;
+  border-radius: 4px;
+  border: none;
+
+  height: 50px;
+  margin: 0;
   padding: 5px 15px;
   line-height: 30px;
 
-  color: #abadad;
-  font-style: italic;
+  /* color: #abadad; */
   font-size: 15px;
+}
+
+.login-input-text{
+  font-size: 14px;
+  position: relative;
+  margin: 5px 0;
+
+  left: 20px;
 }
 
 #login-button{
   cursor: pointer;
-  margin: 0 0 50px 0;
+  width: 80%;
+  max-width: 320px;
+  margin: 20px 0 50px 0;
 }
 
 .button{
-  background: #29BE5D;
+  background: #4470ff;
   border-radius: 3px;
   border-style: none;
 
@@ -89,7 +104,7 @@ body{
 }
 
 #login-button:hover{
-  background: #1c9d49;
+  background: #2c56df;
   cursor: pointer;
 }
 
@@ -98,12 +113,12 @@ body{
 }
 
 .login-link{
-  color: #29BE5D;
+  color: #4470ff;
   margin: 0 0 20px 0;
 }
 
 .login-link:hover{
-  color: #1c9d49;
+  color: #2c56df;
   cursor: pointer;
 }
 
@@ -118,8 +133,15 @@ body{
   cursor: pointer;
 }
 
+.vertical-line{
+  border: 1px solid black;
+}
+
 .create-wallet-key-name{
-  margin: 0;
+  position: relative;
+  margin: 5px 0;
+
+  left: 20px;
 }
 
 .create-wallet-key-box{
@@ -128,7 +150,7 @@ body{
   align-items: center;
   gap: 20px;
   border: 0.5px solid #abadad;
-  border-radius: 50px;
+  border-radius: 3px;
 
   min-width: 450px;
   height: 45px;
