--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1080,6 +1080,17 @@ body{
   }
 }
 
+#search-bar{
+  display: flex;
+}
+
+.search-bar-items{
+  margin: 10px;
+  font-size: 16px;
+  font-family: inter;
+}
+
+
 #network-widget{
   flex: 3;
   margin: 10px;
