--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1270,7 +1270,7 @@ hr {
   #purchase-form-options-container {
     display: grid;
     grid-row: auto;
-    grid-template-columns: .2fr 1fr 1fr 1fr;
+    grid-template-columns: .2fr .2fr 1fr .6fr;
     margin: 1em;
     gap: 10px;
   }
@@ -1290,6 +1290,7 @@ hr {
     }
     .buyFormFilenames{
       align-self: center;
+      margin-left: 15px;
     }
   }
   #purchase-form-header{
